--- a/FAQ.html
+++ b/FAQ.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Learn all about skull emojis: meanings, Unicode, Alt codes, and how to use them. Discover how to type, copy, and paste skull emojis effortlessly.">
     <meta name="keywords" content="skull emojis, emoji meanings, Unicode skull emoji, Alt code skull emoji, copy skull emojis, type skull emoji">
     <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://www.skull-emoji.com/faq.html">
+    <link rel="canonical" href="https://skullemoji.org/faq.html">
     <style>
         body {
             font-family: Arial, sans-serif;
