--- a/emoji-combos.html
+++ b/emoji-combos.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Explore unique emoji combinations, their meanings, and designs. Copy and paste these creative emojis easily.">
     <meta name="keywords" content="skull emoji combos, emoji combinations, emoji meanings, emoji design, copy emoji, creative emojis">
     <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://www.skull-emoji.com/emoji-combos.html">
+    <link rel="canonical" href="https://skullemoji.org/emoji-combos.html">
     <style>
         body {
             font-family: Arial, sans-serif;
