--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Everything about skull emojis: meanings, copy and paste, driven by AI to generate what you want with one click.">
     <meta name="keywords" content="skull emojis, emoji meanings, copy skull emojis, AI emoji generator, skull and crossbones emoji, pirate flag emoji, skull emoji meanings">
     <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://www.skull-emoji.com/">
+    <link rel="canonical" href="https://skullemoji.org/">
     <style>
         body {
             font-family: Arial, sans-serif;
