--- a/emoji-combos.html
+++ b/emoji-combos.html
@@ -91,9 +91,10 @@
     <header>
         <h1>Skull Emoji Combos</h1>
         <nav>
-            <a href="index.html">Home</a>
-            <a href="emoji-combos.html">Emoji Combos</a>
-            <a href="faq.html">FAQ</a>
+            <a href="/index.html">Home</a>
+            <a href="/emoji-combos.html">Emoji Combos</a>
+            <a href="
+            faq.html">FAQ</a>
         </nav>
     </header>
     <div class="container">
