--- a/FAQ.html
+++ b/FAQ.html
@@ -70,9 +70,9 @@
     <header>
         <h1>Skull Emoji Knowledge</h1>
         <nav>
-            <a href="index.html">Home</a>
-            <a href="emoji-combos.html">Emoji Combos</a>
-            <a href="faq.html">FAQ</a>
+            <a href="/index.html">Home</a>
+            <a href="/emoji-combos.html">Emoji Combos</a>
+            <a href="/faq.html">FAQ</a>
         </nav>
     </header>
     <div class="container">
