--- a/index.html
+++ b/index.html
@@ -143,9 +143,9 @@
         <img src="logo.png" alt="SKUll Emoji Logo">
         <h1>SKUll Emoji</h1>
         <nav>
-            <a href="index.html">Home</a>
-            <a href="emoji-combos.html">Emoji Combos</a>
-            <a href="faq.html">FAQ</a>
+            <a href="/index.html">Home</a>
+            <a href="/emoji-combos.html">Emoji Combos</a>
+            <a href="/faq.html">FAQ</a>
         </nav>
     </header>
     <div class="container">
