--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         }
         header nav {
             display: flex;
+            justify-content: center;
             gap: 20px;
             margin: 0 auto;
         }
@@ -140,12 +141,12 @@
 </head>
 <body>
     <header>
-        <img src="logo.png" alt="SKUll Emoji Logo">
-        <h1>SKUll Emoji</h1>
+        <img src="logo.png" alt="Skull Emoji Logo">
+        <h1>Skull Emoji</h1>
         <nav>
-            <a href="/index.html">Home</a>
-            <a href="/emoji-combos.html">Emoji Combos</a>
-            <a href="/faq.html">FAQ</a>
+            <a href="index.html">Home</a>
+            <a href="emoji-combos.html">Emoji Combos</a>
+            <a href="faq.html">FAQ</a>
         </nav>
     </header>
     <div class="container">
@@ -164,7 +165,7 @@
     </footer>
     <script>
         const emojis = [
-            {
+        {
                 emoji: '💀',
                 name: 'Skull',
                 meaning: 'This emoji represents a skull and is typically used to denote death, danger, or dark humor. It can also be used in contexts related to Halloween or to express extreme shock or an exaggerated humorous reaction.',
@@ -268,6 +269,7 @@
                 design: 'The emoji shows a troll, typically depicted with a large nose, tusks, and a menacing expression. The design may vary slightly across different platforms but maintains the same essential elements.',
                 technical: 'Unicode Code: U+1F9CC HTML Code: &#x1F9CC; Supported Version: Emoji 14.0 (released in 2021), Unicode 14.0 Supported Platforms: This emoji is supported across most modern operating systems and platforms, including iOS, Android, Windows, and macOS.'
             }
+            // ... (emojis array remains unchanged)
         ];
 
         document.addEventListener('DOMContentLoaded', () => {
