Update Google Analytics code and update faq.html, emoji-combos.html, index.html

--- a/FAQ.html
+++ b/FAQ.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-5ZQXRBDRV6"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-5ZQXRBDRV6');
+    </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FAQ - Skull Emoji Knowledge</title>
@@ -8,74 +16,23 @@
     <meta name="keywords" content="skull emojis, emoji meanings, Unicode skull emoji, Alt code skull emoji, copy skull emojis, type skull emoji">
     <meta name="robots" content="index, follow">
     <link rel="canonical" href="https://skullemoji.org/faq.html">
+    <link rel="stylesheet" href="css/faq-styles.css">
+    
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="FAQ - Skull Emoji Knowledge">
+    <meta property="og:description" content="Learn all about skull emojis: meanings, Unicode, Alt codes, and how to use them. Discover how to type, copy, and paste skull emojis effortlessly.">
+    <meta property="og:image" content="https://skullemoji.org/logo.png">
+    <meta property="og:url" content="https://skullemoji.org/faq.html">
+    <meta property="og:type" content="website">
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="FAQ - Skull Emoji Knowledge">
+    <meta name="twitter:description" content="Learn all about skull emojis: meanings, Unicode, Alt codes, and how to use them. Discover how to type, copy, and paste skull emojis effortlessly.">
+    <meta name="twitter:image" content="https://skullemoji.org/logo.png">
+
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f9;
-        }
-        header {
-            display: flex;
-            align-items: center;
-            background-color: orange;
-            color: white;
-            padding: 10px 20px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-        }
-        header img {
-            width: 50px;
-            height: 50px;
-            margin-right: 20px;
-        }
-        header h1 {
-            margin: 0;
-            font-size: 1.5rem;
-            color: white;
-        }
-        nav {
-            display: flex;
-            justify-content: center;
-            gap: 20px;
-            flex-grow: 1;
-        }
-        nav a {
-            color: white;
-            font-size: 1.3rem;
-            text-decoration: none;
-        }
-        nav a:hover {
-            color: #002244;
-        }
-        .container {
-            max-width: 80%;
-            margin: 0 auto;
-            padding: 20px;
-        }
-        h2 {
-            color: darkblue;
-        }
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            margin-bottom: 20px;
-            background-color: #fff;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-        }
-        th, td {
-            padding: 10px;
-            border: 1px solid #ddd;
-            text-align: left;
-        }
-        th {
-            background-color: #f2f2f2;
-        }
-        ol, ul {
-            margin-left: 20px;
-        }
-        p, li {
-            line-height: 1.6;
-        }
+        /* 将CSS移至外部文件styles.css */
     </style>
 </head>
 <body>
@@ -135,7 +92,7 @@
             <li>You can also use the skull emoji to symbolize Halloween, horror movies, or anything else that is associated with spookiness or terror.</li>
         </ol>
 
-        <h2>Skull Emoji Similar Names.</h2>
+        <h2>Skull Emoji Similar Names</h2>
         <p>The skull emoji is sometimes referred to by different names, including:</p>
         <ol>
             <li>Skull Face Emoji</li>
@@ -165,5 +122,16 @@
         <p>&copy; 2024 Skull Emoji. All rights reserved.</p>
         <a href="sitemap.xml">Sitemap</a>
     </footer>
+
+    <!-- Schema.org Structured Data -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "WebPage",
+        "name": "FAQ - Skull Emoji Knowledge",
+        "description": "Learn all about skull emojis: meanings, Unicode, Alt codes, and how to use them. Discover how to type, copy, and paste skull emojis effortlessly.",
+        "url": "https://skullemoji.org/faq.html"
+    }
+    </script>
 </body>
 </html>
