--- a/emoji-combos.html
+++ b/emoji-combos.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-5ZQXRBDRV6"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-5ZQXRBDRV6');
+  </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Skull Emoji Combos</title>
@@ -146,7 +154,7 @@
             </article>
             <article class="combo">
                 <figure>
-                    <img src="images/combos/3D_skull_emoji.webp" alt="3D Skull Emoji">
+                    <img src="images/combos/3d_skull_emoji.webp" alt="3D Skull Emoji">
                     <button onclick="copyToClipboard('💀')">Copy</button>
                     <figcaption>
                         <h2>3D Skull Emoji</h2>
@@ -388,7 +396,7 @@
             </article>
             <article class="combo">
                 <figure>
-                    <img src="images/combos/Fat_skull_emoji.webp" alt="Fat Skull Emoji">
+                    <img src="images/combos/fat_skull_emoji.webp" alt="Fat Skull Emoji">
                     <button onclick="copyToClipboard('💀')">Copy</button>
                     <figcaption>
                         <h2>Fat Skull Emoji</h2>
