--- a/FAQ.html
+++ b/FAQ.html
@@ -9,6 +9,8 @@
         gtag('js', new Date());
         gtag('config', 'G-5ZQXRBDRV6');
     </script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8101324760553502"
+    crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FAQ - Skull Emoji Knowledge</title>
