Optimized SEO and updated HTML, CSS, and JavaScript files

--- a/emoji-combos.html
+++ b/emoji-combos.html
@@ -9,109 +9,42 @@
       gtag('js', new Date());
       gtag('config', 'G-5ZQXRBDRV6');
   </script>
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8101324760553502"
-  crossorigin="anonymous"></script>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8101324760553502" crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Skull Emoji Combos</title>
-    <meta name="description" content="Explore unique emoji combinations, their meanings, and designs. Copy and paste these creative emojis easily.">
+    <title>Skull Emoji Combos - Unique Designs and Meanings</title>
+    <meta name="description" content="Explore unique skull emoji combinations, their meanings, and designs. Copy and paste these creative emojis easily.">
     <meta name="keywords" content="skull emoji combos, emoji combinations, emoji meanings, emoji design, copy emoji, creative emojis">
     <meta name="robots" content="index, follow">
     <link rel="canonical" href="https://skullemoji.org/emoji-combos.html">
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f9;
+    <link rel="stylesheet" href="css/combos-styles.css">
+
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="Skull Emoji Combos - Unique Designs and Meanings">
+    <meta property="og:description" content="Explore unique skull emoji combinations, their meanings, and designs. Copy and paste these creative emojis easily.">
+    <meta property="og:image" content="https://skullemoji.org/logo.png">
+    <meta property="og:url" content="https://skullemoji.org/emoji-combos.html">
+    <meta property="og:type" content="website">
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Skull Emoji Combos - Unique Designs and Meanings">
+    <meta name="twitter:description" content="Explore unique skull emoji combinations, their meanings, and designs. Copy and paste these creative emojis easily.">
+    <meta name="twitter:image" content="https://skullemoji.org/logo.png">
+
+    <script type="application/ld+json">
+        {
+            "@context": "https://schema.org",
+            "@type": "WebPage",
+            "name": "Skull Emoji Combos - Unique Designs and Meanings",
+            "description": "Explore unique skull emoji combinations, their meanings, and designs. Copy and paste these creative emojis easily.",
+            "url": "https://skullemoji.org/emoji-combos.html"
         }
-        header {
-            display: flex;
-            align-items: center;
-            background-color: orange;
-            color: white;
-            padding: 10px 20px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-        }
-        header img {
-            width: 50px;
-            height: 50px;
-            margin-right: 20px;
-        }
-        header h1 {
-            margin: 0;
-            font-size: 1.5rem;
-            color: white;
-        }
-        nav {
-            display: flex;
-            justify-content: center;
-            gap: 20px;
-            flex-grow: 1;
-        }
-        nav a {
-            color: white;
-            font-size: 1.3rem;
-            text-decoration: none;
-        }
-        nav a:hover {
-            color: #002244;
-        }
-        .container {
-            max-width: 70%;
-            margin: 0 auto;
-            padding: 20px;
-        }
-        .grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-            gap: 20px;
-        }
-        .combo {
-            background-color: #fff;
-            border: 2px solid #ccc;
-            border-radius: 10px;
-            padding: 20px;
-            text-align: center;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            transition: transform 0.2s, box-shadow 0.2s;
-        }
-        .combo:hover {
-            transform: scale(1.05);
-            box-shadow: 0 8px 12px rgba(0, 0, 0, 0.2);
-        }
-        .combo img {
-            max-width: 100%;
-            height: auto;
-        }
-        .combo h2 {
-            font-size: 1rem;
-            color: #007bff;
-        }
-        .combo p {
-            font-size: 0.8rem;
-            color: #333;
-        }
-        .combo button {
-            margin-top: 5px;
-            padding: 3px 7px;
-            font-size: 0.6rem;
-            border: 1px solid #007bff;
-            border-radius: 5px;
-            background-color: white;
-            color: #007bff;
-            cursor: pointer;
-            transition: background-color 0.2s, color 0.2s;
-        }
-        .combo button:hover {
-            background-color: #007bff;
-            color: white;
-        }
-    </style>
+        </script>
 </head>
 <body>
     <header>
-        <img src="logo.png" alt="Skull Emoji Logo">
+        <img src="logo.png" alt="Skull Emoji Logo" loading="lazy">
         <h1>Skull Emoji Combos</h1>
         <nav>
             <a href="index.html">Home</a>
@@ -123,7 +56,7 @@
         <section class="grid">
             <article class="combo">
                 <figure>
-                    <img src="images/combos/shiny_skull_emoji.webp" alt="Shiny Skull Emoji">
+                    <img src="images/combos/shiny_skull_emoji.webp" alt="Shiny Skull Emoji" loading="lazy">
                     <button onclick="copyToClipboard('💀')">Copy</button>
                     <figcaption>
                         <h2>Shiny Skull Emoji</h2>
@@ -132,6 +65,7 @@
                     </figcaption>
                 </figure>
             </article>
+            <!-- 其他emoji组合类似 -->
             <article class="combo">
                 <figure>
                     <img src="images/combos/realistic_skull_emoji.webp" alt="Realistic Skull Emoji">
@@ -156,7 +90,7 @@
             </article>
             <article class="combo">
                 <figure>
-                    <img src="images/combos/3d_skull_emoji.webp" alt="3D Skull Emoji">
+                    <img src="images/combos/3D_skull_emoji.webp" alt="3D Skull Emoji">
                     <button onclick="copyToClipboard('💀')">Copy</button>
                     <figcaption>
                         <h2>3D Skull Emoji</h2>
@@ -571,23 +505,13 @@
                         <p><strong>Design:</strong> This emoji features a smiling purple skull, highlighting its cheerful and unique nature.</p>
                     </figcaption>
                 </figure>
-            </article>
+            </article>  
         </section>
     </div>
     <footer>
         <p>&copy; 2024 Skull Emoji. All rights reserved.</p>
         <a href="sitemap.xml">Sitemap</a>
     </footer>
-    <script>
-        document.addEventListener('DOMContentLoaded', () => {
-            function copyToClipboard(text) {
-                navigator.clipboard.writeText(text).then(() => {
-                    alert('Emoji copied to clipboard!');
-                }).catch(err => {
-                    console.error('Failed to copy: ', err);
-                });
-            }
-        });
-    </script>
+    <script src="js/combos-scripts.js" defer></script>
 </body>
 </html>
