Resolved merge conflict in faq.html

--- a/faq.html
+++ b/faq.html
@@ -9,38 +9,33 @@
         gtag('js', new Date());
         gtag('config', 'G-5ZQXRBDRV6');
     </script>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8101324760553502" crossorigin="anonymous"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8101324760553502"
+    crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Skull Emoji FAQ - Meanings, Unicode, Alt Codes</title>
-    <meta name="description" content="Find answers to common questions about skull emojis, including meanings, Unicode, and Alt codes.">
+    <title>FAQ - Skull Emoji Knowledge</title>
+    <meta name="description" content="Learn all about skull emojis: meanings, Unicode, Alt codes, and how to use them. Discover how to type, copy, and paste skull emojis effortlessly.">
     <meta name="keywords" content="skull emojis, emoji meanings, Unicode skull emoji, Alt code skull emoji, copy skull emojis, type skull emoji">
     <meta name="robots" content="index, follow">
     <link rel="canonical" href="https://skullemoji.org/faq.html">
     <link rel="stylesheet" href="css/faq-styles.css">
-
+    
     <!-- Open Graph Meta Tags -->
-    <meta property="og:title" content="Skull Emoji FAQ - Meanings, Unicode, Alt Codes">
-    <meta property="og:description" content="Find answers to common questions about skull emojis, including meanings, Unicode, and Alt codes.">
+    <meta property="og:title" content="FAQ - Skull Emoji Knowledge">
+    <meta property="og:description" content="Learn all about skull emojis: meanings, Unicode, Alt codes, and how to use them. Discover how to type, copy, and paste skull emojis effortlessly.">
     <meta property="og:image" content="https://skullemoji.org/logo.png">
     <meta property="og:url" content="https://skullemoji.org/faq.html">
     <meta property="og:type" content="website">
 
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Skull Emoji FAQ - Meanings, Unicode, Alt Codes">
-    <meta name="twitter:description" content="Find answers to common questions about skull emojis, including meanings, Unicode, and Alt codes.">
+    <meta name="twitter:title" content="FAQ - Skull Emoji Knowledge">
+    <meta name="twitter:description" content="Learn all about skull emojis: meanings, Unicode, Alt codes, and how to use them. Discover how to type, copy, and paste skull emojis effortlessly.">
     <meta name="twitter:image" content="https://skullemoji.org/logo.png">
 
-    <script type="application/ld+json">
-        {
-            "@context": "https://schema.org",
-            "@type": "WebPage",
-            "name": "FAQ - Skull Emoji Knowledge",
-            "description": "Learn all about skull emojis: meanings, Unicode, Alt codes, and how to use them. Discover how to type, copy, and paste skull emojis effortlessly.",
-            "url": "https://skullemoji.org/faq.html"
-        }
-        </script>
+    <style>
+        /* 将CSS移至外部文件styles.css */
+    </style>
 </head>
 <body>
     <header>
@@ -130,5 +125,15 @@
         <a href="sitemap.xml">Sitemap</a>
     </footer>
 
+    <!-- Schema.org Structured Data -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "WebPage",
+        "name": "FAQ - Skull Emoji Knowledge",
+        "description": "Learn all about skull emojis: meanings, Unicode, Alt codes, and how to use them. Discover how to type, copy, and paste skull emojis effortlessly.",
+        "url": "https://skullemoji.org/faq.html"
+    }
+    </script>
 </body>
 </html>
